rebrand for VLS

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bullshit Bingo</title>
+    <title>VLS Bingo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" href="files/style.css">
     <script type="text/javascript" src="files/game.js"></script>
@@ -28,7 +28,7 @@
         <tr>
           <td title="Click to mark cell" id="cell10"></td>
           <td title="Click to mark cell" id="cell11"></td>
-          <td class="freecell">BULLSHIT BINGO<br>(free&nbsp;square)</td>
+          <td class="freecell">VLS BINGO<br>(free&nbsp;square)</td>
           <td title="Click to mark cell" id="cell12"></td>
           <td title="Click to mark cell" id="cell13"></td>
         </tr>
